--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -59,21 +59,21 @@ p{
     display: flex;
     align-items: center;
     .dropdown-menu{
-      transition: all 0.3s ease;
-      opacity: 0;
-      visibility: hidden;
-      display: block;
-      height: 0;
-      padding: 0;
+      //transition: all 0.3s ease;
+      //opacity: 0;
+      //visibility: hidden;
+      //display: block;
+      //height: 0;
+      //padding: 0;
       .dropdown-item{
         font-weight: 600;
       }
     }
     .dropdown-menu.show{
-      transition: all 0.3s ease;
-      visibility: visible;
-      opacity: 1;
-      height: auto;
+      //transition: all 0.3s ease;
+      //visibility: visible;
+      //opacity: 1;
+      //height: auto;
       //padding: auto;
     }
   }
