--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -9,99 +9,99 @@ $navbar-color : #1B3864;
     height: auto;
     width: 100%;
     .navbar-brand{
-      //margin-left: 20px;
+      margin-left: 20px;
     }
-    //.navbar-toggler{
-    //  margin-right: 20px;
-    //  border: 1px solid white;
-    //  border-radius: 20px;
-    //  padding-left: 0.1rem;
-    //  padding-right: 0.1rem;
-    //  padding-top: 0.1rem;
-    //  padding-bottom: 0.1rem;
-    //  &:focus{
-    //    box-shadow: none;
-    //    border: 1.5px solid white;
-    //    background-color: $navbar-color;
-    //    .navbar-toggler-icon{
-    //      background-image: none;
-    //      display: flex;
-    //      align-items: center;
-    //      justify-content: center;
-    //      color: #ffffff;
-    //    }
-    //  }
-    //  .navbar-toggler-icon{
-    //    background-image: none;
-    //    display: flex;
-    //    align-items: center;
-    //    justify-content: center;
-    //    color: #d7d7d7;
-    //  }
-    //}
-    //.navbar-toggler.collapsed{
-    //  border: 1px solid white;
-    //  background-color: $navbar-color;
-    //}
-    //.navbar-collapse{
-    //  z-index: 10;
-    //  background-color: $navbar-color;
-    //  .navbar-nav{
-    //    //align-items: start;
-    //    .nav-item{
-    //      margin-left: 22px;
-    //      margin-right: 30px;
-    //      .nav-link{
-    //        color: rgba(255,255,255,1)!important;
-    //        font-size: 15px;
-    //        font-weight: 500;
-    //        line-height: 16px;
-    //      }
-    //      .dropdown-menu{
-    //        //transition: all 0.3s ease;
-    //        //opacity: 0;
-    //        //visibility: hidden;
-    //        //display: block;
-    //        //height: 0;
-    //        //padding: 0;
-    //        //background-color: $navbar-color;
-    //        //border: none;
-    //        .dropdown-item{
-    //          font-weight: 500;
-    //          font-size: 14px;
-    //          color: white;
-    //        }
-    //        .dropdown-divider{
-    //          margin-left: 1rem;
-    //          color: white;
-    //          width: 40%;
-    //        }
-    //      }
-    //      .dropdown-menu.show{
-    //        //transition: all 0.3s ease;
-    //        //visibility: visible;
-    //        //opacity: 1;
-    //        //height: auto;
-    //      }
-    //      .fa-search{
-    //        color: white!important;
-    //        font-size: 14px;
-    //      }
-    //    }
-    //  }
-    //  .nav-register{
-    //    margin-left: 22px;
-    //    margin-bottom: 20px;
-    //  }
-    //}
+    .navbar-toggler{
+      margin-right: 20px;
+      border: 1px solid white;
+      border-radius: 20px;
+      padding-left: 0.1rem;
+      padding-right: 0.1rem;
+      padding-top: 0.1rem;
+      padding-bottom: 0.1rem;
+      &:focus{
+        box-shadow: none;
+        border: 1.5px solid white;
+        background-color: $navbar-color;
+        .navbar-toggler-icon{
+          background-image: none;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          color: #ffffff;
+        }
+      }
+      .navbar-toggler-icon{
+        background-image: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #d7d7d7;
+      }
+    }
+    .navbar-toggler.collapsed{
+      border: 1px solid white;
+      background-color: $navbar-color;
+    }
+    .navbar-collapse{
+      z-index: 10;
+      background-color: $navbar-color;
+      .navbar-nav{
+        //align-items: start;
+        .nav-item{
+          margin-left: 22px;
+          margin-right: 30px;
+          .nav-link{
+            color: rgba(255,255,255,1)!important;
+            font-size: 15px;
+            font-weight: 500;
+            line-height: 16px;
+          }
+          .dropdown-menu{
+            transition: all 0.3s ease;
+            opacity: 0;
+            visibility: hidden;
+            display: block;
+            height: 0;
+            padding: 0;
+            background-color: $navbar-color;
+            border: none;
+            .dropdown-item{
+              font-weight: 500;
+              font-size: 14px;
+              color: white;
+            }
+            .dropdown-divider{
+              margin-left: 1rem;
+              color: white;
+              width: 40%;
+            }
+          }
+          .dropdown-menu.show{
+            transition: all 0.3s ease;
+            visibility: visible;
+            opacity: 1;
+            height: auto;
+          }
+          .fa-search{
+            color: white!important;
+            font-size: 14px;
+          }
+        }
+      }
+      .nav-register{
+        margin-left: 22px;
+        margin-bottom: 20px;
+      }
+    }
 
-    //.btn-light{
-    //  border-radius: 16px;
-    //  color: $navbar-color;
-    //  font-size: 14px;
-    //  padding-left: 16px;
-    //  padding-right: 16px;
-    //}
+    .btn-light{
+      border-radius: 16px;
+      color: $navbar-color;
+      font-size: 14px;
+      padding-left: 16px;
+      padding-right: 16px;
+    }
 
   }
   .carousel-holder{
