--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -39,39 +39,41 @@
     .navbar .navbar-collapse {
       z-index: 10;
       background-color: #1B3864; }
-      .navbar .navbar-collapse .navbar-nav .nav-item {
-        margin-left: 22px;
-        margin-right: 30px; }
-        .navbar .navbar-collapse .navbar-nav .nav-item .nav-link {
-          color: white !important;
-          font-size: 15px;
-          font-weight: 500;
-          line-height: 16px; }
-        .navbar .navbar-collapse .navbar-nav .nav-item .dropdown-menu {
-          transition: all 0.3s ease;
-          opacity: 0;
-          visibility: hidden;
-          display: block;
-          height: 0;
-          padding: 0;
-          background-color: #1B3864;
-          border: none; }
-          .navbar .navbar-collapse .navbar-nav .nav-item .dropdown-menu .dropdown-item {
+      .navbar .navbar-collapse .navbar-nav {
+        align-items: start; }
+        .navbar .navbar-collapse .navbar-nav .nav-item {
+          margin-left: 22px;
+          margin-right: 30px; }
+          .navbar .navbar-collapse .navbar-nav .nav-item .nav-link {
+            color: white !important;
+            font-size: 15px;
             font-weight: 500;
-            font-size: 14px;
-            color: white; }
-          .navbar .navbar-collapse .navbar-nav .nav-item .dropdown-menu .dropdown-divider {
-            margin-left: 1rem;
-            color: white;
-            width: 40%; }
-        .navbar .navbar-collapse .navbar-nav .nav-item .dropdown-menu.show {
-          transition: all 0.3s ease;
-          visibility: visible;
-          opacity: 1;
-          height: auto; }
-        .navbar .navbar-collapse .navbar-nav .nav-item .fa-search {
-          color: white !important;
-          font-size: 14px; }
+            line-height: 16px; }
+          .navbar .navbar-collapse .navbar-nav .nav-item .dropdown-menu {
+            transition: all 0.3s ease;
+            opacity: 0;
+            visibility: hidden;
+            display: block;
+            height: 0;
+            padding: 0;
+            background-color: #1B3864;
+            border: none; }
+            .navbar .navbar-collapse .navbar-nav .nav-item .dropdown-menu .dropdown-item {
+              font-weight: 500;
+              font-size: 14px;
+              color: white; }
+            .navbar .navbar-collapse .navbar-nav .nav-item .dropdown-menu .dropdown-divider {
+              margin-left: 1rem;
+              color: white;
+              width: 40%; }
+          .navbar .navbar-collapse .navbar-nav .nav-item .dropdown-menu.show {
+            transition: all 0.3s ease;
+            visibility: visible;
+            opacity: 1;
+            height: auto; }
+          .navbar .navbar-collapse .navbar-nav .nav-item .fa-search {
+            color: white !important;
+            font-size: 14px; }
       .navbar .navbar-collapse .nav-register {
         margin-left: 22px;
         margin-bottom: 20px; }
