--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -3,6 +3,40 @@
   html, body {
     overflow-x: hidden; }
 
+  .paging-sector {
+    display: flex;
+    justify-content: center; }
+    .paging-sector .pagination .page-item {
+      margin-right: 4px;
+      border: 1px solid #DDDDDD;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 36px;
+      height: 36px;
+      border-radius: 4px; }
+      .paging-sector .pagination .page-item .page-link {
+        border: none;
+        color: black;
+        font-size: 14px;
+        font-weight: 700;
+        width: 100%;
+        height: 100%; }
+    .paging-sector .pagination .page-item.active {
+      margin-right: 4px;
+      border: 1px solid #DDDDDD;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 36px;
+      height: 36px;
+      border-radius: 4px;
+      background-color: #22539D; }
+      .paging-sector .pagination .page-item.active .page-link {
+        border: none;
+        padding: 0px;
+        background-color: transparent; }
+
   .navbar {
     background-color: #1B3864;
     height: auto;
