--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,40 @@ p {
   padding-right: 0 !important;
   padding-left: 0 !important; }
 
+.paging-sector {
+  display: flex;
+  justify-content: flex-end; }
+  .paging-sector .pagination .page-item {
+    margin-right: 4px;
+    border: 1px solid #DDDDDD;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 36px;
+    height: 36px;
+    border-radius: 4px; }
+    .paging-sector .pagination .page-item .page-link {
+      border: none;
+      color: black;
+      font-size: 14px;
+      font-weight: 700;
+      width: 100%;
+      height: 100%; }
+  .paging-sector .pagination .page-item.active {
+    margin-right: 4px;
+    border: 1px solid #DDDDDD;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 36px;
+    height: 36px;
+    border-radius: 4px;
+    background-color: #22539D; }
+    .paging-sector .pagination .page-item.active .page-link {
+      border: none;
+      padding: 0px;
+      background-color: transparent; }
+
 .homepage-body {
   position: relative; }
 
@@ -511,7 +545,11 @@ p {
       border-radius: 4px; }
       .news-holder .news-main .paging-sector .pagination .page-item .page-link {
         border: none;
-        padding: 0px; }
+        color: black;
+        font-size: 14px;
+        font-weight: 700;
+        width: 100%;
+        height: 100%; }
     .news-holder .news-main .paging-sector .pagination .page-item.active {
       margin-right: 4px;
       border: 1px solid #DDDDDD;
