--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,6 +25,49 @@ p{
   padding-right: 0!important;
   padding-left: 0!important;
 }
+
+//Paging
+.paging-sector{
+  display: flex;
+  justify-content: flex-end;
+  .pagination{
+    .page-item{
+      margin-right: 4px;
+      border: 1px solid #DDDDDD;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 36px;
+      height: 36px;
+      border-radius: 4px;
+      .page-link{
+        border: none;
+        color: black;
+        font-size: 14px;
+        font-weight: 700;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .page-item.active{
+      margin-right: 4px;
+      border: 1px solid #DDDDDD;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 36px;
+      height: 36px;
+      border-radius: 4px;
+      background-color: #22539D;
+      .page-link{
+        border: none;
+        padding: 0px;
+        background-color: transparent;
+      }
+    }
+  }
+}
+
 .homepage-body{
   position: relative;
 }
@@ -610,7 +653,11 @@ p{
           border-radius: 4px;
           .page-link{
             border: none;
-            padding: 0px;
+            color: black;
+            font-size: 14px;
+            font-weight: 700;
+            width: 100%;
+            height: 100%;
           }
         }
         .page-item.active{
