--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,6 +40,7 @@ p{
       width: 36px;
       height: 36px;
       border-radius: 4px;
+      overflow: hidden;
       .page-link{
         border: none;
         color: black;
@@ -59,6 +60,7 @@ p{
       height: 36px;
       border-radius: 4px;
       background-color: #22539D;
+      overflow: hidden;
       .page-link{
         border: none;
         background-color: transparent;
