--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,8 @@ p {
     justify-content: center;
     width: 36px;
     height: 36px;
-    border-radius: 4px; }
+    border-radius: 4px;
+    overflow: hidden; }
     .paging-sector .pagination .page-item .page-link {
       border: none;
       color: black;
@@ -50,7 +51,8 @@ p {
     width: 36px;
     height: 36px;
     border-radius: 4px;
-    background-color: #22539D; }
+    background-color: #22539D;
+    overflow: hidden; }
     .paging-sector .pagination .page-item.active .page-link {
       border: none;
       background-color: transparent;
