update css news-other-post

--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -595,6 +595,7 @@ $navbar-color : #1B3864;
           }
           .col-5{
             padding-right: 0px;
+            max-height: 100px;
             .listenable-box{
               display: flex;
               left: 12px;
