--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -489,7 +489,8 @@
           width: 100%;
           height: 100px !important; }
         .news-holder .news-main .news-other-post .other-post .col-5 {
-          padding-right: 0px; }
+          padding-right: 0px;
+          max-height: 100px; }
           .news-holder .news-main .news-other-post .other-post .col-5 .listenable-box {
             display: flex;
             left: 12px;
