--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -637,6 +637,7 @@ p{
           line-height: 19.6px;
           color: #4F4F4F;
           font-weight: 400;
+          display: block;
         }
       }
     }
