--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -3484,7 +3484,7 @@ $navbar-color : #1B3864;
             padding: 0px 10px;
             position: absolute;
             left: 0px;
-            bottom: 34px;
+            bottom: 12px;
             padding-top: 0;
             padding-bottom: 0;
             color: #fff;
@@ -3493,7 +3493,7 @@ $navbar-color : #1B3864;
             h5{
               font-style: normal;
               font-weight: bold;
-              font-size: 20px;
+              font-size: 18px;
               line-height: 28px;
               letter-spacing: 0.04em;
               color: #FFFFFF;
@@ -3510,13 +3510,13 @@ $navbar-color : #1B3864;
           .item-pos{
             position: absolute;
             right: 10px;
-            bottom: 34px;
+            bottom: 12px;
             text-align: right;
             z-index: 4;
             p{
               font-style: normal;
               font-weight: bold;
-              font-size: 15px;
+              font-size: 14px;
               line-height: 22px;
               letter-spacing: 0.04em;
               color: #FFFFFF;
@@ -3524,9 +3524,9 @@ $navbar-color : #1B3864;
           }
           .carousel-gradient-bottom{
             position: absolute;
-            bottom: 20px;
+            bottom: 0px;
             left: 0;
-            height: 110px;
+            height: 100px;
             width: 100%;
             background: black;
             z-index: 1;
@@ -3641,6 +3641,7 @@ $navbar-color : #1B3864;
             padding: 0px 5px;
             img{
               width: 100%;
+              max-width: 100%;
             }
           }
         }
