--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2572,6 +2572,7 @@ p{
   .life-carousel-holder{
     height: 884px;
     width: 100%;
+    padding-left: 30px;
     .carousel-indicators{
       bottom: 3%;
       button{
@@ -2596,7 +2597,16 @@ p{
       }
     }
     .carousel-inner{
+      height: 100%;
+      width: 100%;
       .carousel-item{
+        height: 100%;
+        width: 100%;
+        img{
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
         .carousel-caption{
           position: absolute;
           left: 30px;
@@ -2788,6 +2798,9 @@ p{
           padding: 0px 5px;
           img{
             width: 100%;
+            max-width: 103px;
+            max-height: 103px;
+            object-fit: cover;
           }
         }
       }
@@ -2797,9 +2810,6 @@ p{
           margin-top: 7px;
         }
       }
-    }
-    .life-carousel-holder{
-      padding-left: 30px;
     }
   }
 
