--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1068,6 +1068,9 @@ p{
     .col-md-11{
       padding-left: 20px;
     }
+    .col-10{
+      padding-left: 24px;
+    }
     .user-avatar{
       width: 60px;
       height: 60px;
@@ -1121,6 +1124,9 @@ p{
     .col-md-11{
       padding-left: 20px;
     }
+    .col-10{
+      padding-left: 24px;
+    }
     .user-avatar{
       width: 60px;
       height: 60px;
@@ -1157,6 +1163,8 @@ p{
   height: 1px;
   border-bottom: 1px solid #DDDDDD;
 }
+
+
 // ECONOMY PAGE
 .category-banner{
   width: 100%;
