--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -3995,30 +3995,30 @@ $navbar-color : #1B3864;
           padding-top: 20px!important;
         }
 
-        .comment{
-          padding: 0px 10px;
-          margin-top: 40px;
-          .title{
-            margin-bottom: 20px;
-          }
-          .comment-block{
-            margin-top: 20px!important;
-            .user-name{
-              margin-top: 7px;
-            }
-            .comment-date-time{
-              margin-top: 3px;
-            }
-          }
-          .post-comment{
-            .form-floating{
-              margin-top: 10px;
-            }
-          }
-          .col-md-11{
-            padding-left: 10px;
-          }
-        }
+        //.comment{
+        //  padding: 0px 10px;
+        //  margin-top: 40px;
+        //  .title{
+        //    margin-bottom: 20px;
+        //  }
+        //  .comment-block{
+        //    margin-top: 20px!important;
+        //    .user-name{
+        //      margin-top: 7px;
+        //    }
+        //    .comment-date-time{
+        //      margin-top: 3px;
+        //    }
+        //  }
+        //  .post-comment{
+        //    .form-floating{
+        //      margin-top: 10px;
+        //    }
+        //  }
+        //  .col-md-11{
+        //    padding-left: 10px;
+        //  }
+        //}
         .news-other-post{
           .other-post{
             margin-top: 0px;
