--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -886,6 +886,8 @@ p {
     margin-top: 28px; }
     .comment .comment-block .col-md-11 {
       padding-left: 20px; }
+    .comment .comment-block .col-11 {
+      padding-left: 24px; }
     .comment .comment-block .col-10 {
       padding-left: 24px; }
     .comment .comment-block .user-avatar {
@@ -930,6 +932,8 @@ p {
     margin-top: 30px; }
     .comment .post-comment .col-md-11 {
       padding-left: 20px; }
+    .comment .post-comment .col-11 {
+      padding-left: 24px; }
     .comment .post-comment .col-10 {
       padding-left: 24px; }
     .comment .post-comment .user-avatar {
