--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1048,6 +1048,7 @@ p{
     }
   }
 }
+
 .comment{
   margin-top: 20px;
   .title{
@@ -1067,6 +1068,9 @@ p{
     margin-top: 28px;
     .col-md-11{
       padding-left: 20px;
+    }
+    .col-11{
+      padding-left: 24px;
     }
     .col-10{
       padding-left: 24px;
@@ -1123,6 +1127,9 @@ p{
     margin-top: 30px;
     .col-md-11{
       padding-left: 20px;
+    }
+    .col-11{
+      padding-left: 24px;
     }
     .col-10{
       padding-left: 24px;
