--- a/template/podcast_episodes.html
+++ b/template/podcast_episodes.html
@@ -275,10 +275,12 @@
                 </div>
                 <div class="comment-block">
                     <div class="row">
-                        <div class="col-md-1">
-                            <div class="user-avatar"></div>
+                        <div class="col-2 col-md-1">
+                            <div class="user-avatar">
+                                <img src="../resources/img/user-img/user-img-1.png" alt="">
+                            </div>
                         </div>
-                        <div class="col-md-11">
+                        <div class="col-10 col-md-11">
                             <p class="user-name">tranvanan122</p>
                             <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi đã thấy
                                 hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
@@ -299,10 +301,12 @@
                 </div>
                 <div class="comment-block">
                     <div class="row">
-                        <div class="col-md-1">
-                            <div class="user-avatar"></div>
+                        <div class="col-2 col-md-1">
+                            <div class="user-avatar">
+                                <img src="../resources/img/user-img/user-img-2.png" alt="">
+                            </div>
                         </div>
-                        <div class="col-md-11">
+                        <div class="col-10 col-md-11">
                             <p class="user-name">phanvantai123</p>
                             <p class="comment-text">Đã từng là quản lý và đã thất bại. Thật sự là không hề dễ. Cảm ơn
                                 tác giá đã có một bài viết rất ý nghĩa và sâu sắc</p>
@@ -323,10 +327,12 @@
                 </div>
                 <div class="post-comment">
                     <div class="row">
-                        <div class="col-md-1">
-                            <div class="user-avatar"></div>
+                        <div class="col-2 col-md-1">
+                            <div class="user-avatar">
+                                <img src="../resources/img/user-img/user-img-3.png" alt="">
+                            </div>
                         </div>
-                        <div class="col-md-11">
+                        <div class="col-10 col-md-11">
                             <div class="form-floating">
                                 <textarea class="form-control" placeholder="Leave a comment here"
                                           id="floatingTextarea"></textarea>
